fixed flipcard backface visibility when browsing in firefox

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
             transform: translateX(-100%);
         }
     }
-    --animate-loop-scroll: loop-scroll 50s linear infinite;
+    --animate-loop-scroll: loop-scroll 50s linear infinite
 }
 
 .cardScroll{
